--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ cursor : pointer;
 form {
 vertical-align : middle;
 }
-.logo {
+#logo {
 color : #444444;
 font-size : 1.5em;
 height : 120px;
@@ -72,10 +72,11 @@ line-height:45px;
 * {
 font-family : arial, sans-serif;
 }
-#logo {
+#logo img {
 margin-top : -1em;
 position : relative;
 top : 1em;
+display:inline;
 }
 #fake_mouse {
 position : absolute;
